--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html lang="es">
 
 <head>
   <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-
+  <title>GamingWorld</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-
+<section>
+  <header>
+    <a href="#" ><img src="img/logo.png" alt="" class="logo"></a>
+    <ul>
+      <li><a href="#">Descargas</a></li>
+    </ul>
+  </header>
+</section>
 
 </body>
 
