--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="es">
+<html lang="es" xmlns="http://www.w3.org/1999/html">
 
 <head>
   <meta charset="utf-8">
@@ -8,14 +8,27 @@
 </head>
 
 <body>
-<section>
+<section class="Seccion1"/>
+  <section>
   <header>
     <a href="#" ><img src="img/logo.png" alt="" class="logo"></a>
     <ul>
       <li><a href="#">Descargas</a></li>
     </ul>
   </header>
+  <div class="content">
+    <div class="textBox"></div>
+      <h1>HAGAMOS EL <br> MUNDO MAS GAMER</h1>
+      <p> Acercate y conectate a la escena<br>
+        competitiva de los videojuegos y<br>
+        ayudanos a hacer crecer esta<br>
+        comunidad<br>
+      </p>
+      <button type="button">Obtener App</button>
+    </div>
+  </section>
 </section>
+
 
 </body>
 
