--- a/index.html
+++ b/index.html
@@ -8,26 +8,33 @@
 </head>
 
 <body>
-<section class="Seccion1"/>
-  <section>
-  <header>
-    <a href="#" ><img src="img/logo.png" alt="" class="logo"></a>
-    <ul>
-      <li><a href="#">Descargas</a></li>
-    </ul>
-  </header>
-  <div class="content">
-    <div class="textBox"></div>
-      <h1>HAGAMOS EL <br> MUNDO MAS GAMER</h1>
-      <p> Acercate y conectate a la escena<br>
-        competitiva de los videojuegos y<br>
-        ayudanos a hacer crecer esta<br>
-        comunidad<br>
-      </p>
+
+  <div class="sec1">
+    <div class="barra_nav">
+      <img src="img/logo-blanco.png" alt="" class="logo">
+      <nav>
+        <ul>
+          <li><a href="#">Descargar</a></li>
+        </ul>
+      </nav>
+      <img src="img/menu.png" alt="" class="menu-icon">
+
+    </div>
+    <div class="content">
+      <h1>HAGAMOS EL MUNDO MAS GAMER</h1>
+      <div class="textBox">
+        <p> Acercate y conectate a la escena<br>
+          competitiva de los videojuegos y<br>
+          ayudanos a hacer crecer esta<br>
+          comunidad<br>
+        </p>
+      </div>
       <button type="button">Obtener App</button>
     </div>
-  </section>
-</section>
+
+
+  </div>
+
 
 
 </body>
