--- a/index.html
+++ b/index.html
@@ -3,23 +3,45 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <title>GamingWorld</title>
   <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
 
-  <div class="sec1">
-    <div class="barra_nav">
-      <img src="img/logo-blanco.png" alt="" class="logo">
-      <nav>
-        <ul>
-          <li><a href="#">Descargar</a></li>
-        </ul>
-      </nav>
-      <img src="img/menu.png" alt="" class="menu-icon">
-
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">
+      <img src="img/logo-blanco.png" alt="" width="100" >
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link active" aria-current="page" href="#">Home</a>
+        <a class="nav-link" href="#">Features</a>
+        <a class="nav-link" href="#">Pricing</a>
+        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+      </div>
     </div>
+  </div>
+  </nav>
+
+  <div class="sec1">
+<!--    <div class="barra_nav">-->
+<!--      <img src="img/logo-blanco.png" alt="" class="logo">-->
+<!--      <nav>-->
+<!--        <ul>-->
+<!--          <li><a href="#">Descargar</a></li>-->
+<!--        </ul>-->
+<!--      </nav>-->
+<!--      <img src="img/menu.png" alt="" class="menu-icon">-->
+
+<!--    </div>-->
     <div class="content">
       <h1>HAGAMOS EL MUNDO MAS GAMER</h1>
       <div class="textBox">
