--- a/index.html
+++ b/index.html
@@ -11,37 +11,28 @@
 </head>
 
 <body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+  <div class="container">
+    <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <img src="img/logo-blanco.png" alt="" width="100" >
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
-        <a class="nav-link" href="#">Features</a>
-        <a class="nav-link" href="#">Pricing</a>
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-      </div>
+    </a><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu<i class="fas fa-bars"></i></button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">Contact</a></li>
+      </ul>
     </div>
   </div>
-  </nav>
+</nav>
+
+
+
 
   <div class="sec1">
-<!--    <div class="barra_nav">-->
-<!--      <img src="img/logo-blanco.png" alt="" class="logo">-->
-<!--      <nav>-->
-<!--        <ul>-->
-<!--          <li><a href="#">Descargar</a></li>-->
-<!--        </ul>-->
-<!--      </nav>-->
-<!--      <img src="img/menu.png" alt="" class="menu-icon">-->
 
-<!--    </div>-->
     <div class="content">
       <h1>HAGAMOS EL MUNDO MAS GAMER</h1>
       <div class="textBox">
@@ -56,6 +47,47 @@
 
 
   </div>
+
+<section class="projects-section " id="projects">
+  <div class="container">
+    <!-- Featured Project Row-->
+    <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+      <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="img/GamerAmateur.jpg" alt="" /></div>
+      <div class="col-xl-4 col-lg-5">
+        <div class="featured-text text-center text-lg-left">
+          <h1 class="text-white mb-0">Gamer Amateur</h1>
+          <p class="text-white-50 mb-0">Puedes registrarte y compartir tus logros y videojuegos  que juegues para que tengas más posibilidades de pertenecer a equipos profecionales de gaming.</p>
+          <button type="button">Más Información</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+      <div class="col-xl-4 col-lg-5">
+        <div class="featured-text text-center text-lg-left">
+          <h1 class="text-white mb-0">Streamer Amateur</h1>
+          <p class="text-white-50 mb-0">Realiza striming con dos simples pasos y tus directos llegaran a muchas personas. Disfruta  y diviertete transmitiendo directos.</p>
+          <button type="button">Más Información</button>
+        </div>
+      </div>
+      <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="img/GamerAmateur.jpg" alt="" /></div>
+
+    </div>
+
+    <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+      <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="img/GamerAmateur.jpg" alt="" /></div>
+      <div class="col-xl-4 col-lg-5">
+        <div class="featured-text text-center text-lg-left">
+          <h1 class="text-white mb-0">Tips y Tareas</h1>
+          <p class="text-white-50 mb-0">Mejora tus habilidades como streamer para brindar la mejor calidad en tus streamings o como gamer para pulir tus habilidades y dar lo mejor de ti en cada torneo.</p>
+          <button type="button">Más Información</button>
+        </div>
+      </div>
+    </div>
+
+
+  </div>
+</section>
 
 
 
