--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="es" xmlns="http://www.w3.org/1999/html">
 
 <head>
+
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <title>GamingWorld</title>
   <link rel="stylesheet" href="css/styles.css">
@@ -11,28 +12,30 @@
 </head>
 
 <body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-  <div class="container">
-    <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <img src="img/logo-blanco.png" alt="" width="100" >
-    </a><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu<i class="fas fa-bars"></i></button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">Contact</a></li>
-      </ul>
+
+
+
+  <nav class="navbar navbar-expand-lg navbar-dark ">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="img/logo-blanco.png" alt="" width="100" >
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link js-scroll-trigger" href="#Descargar">Descargar</a>
+          <a class="nav-link js-scroll-trigger" href="#Novedades">Novedades</a>
+          <a class="nav-link js-scroll-trigger" href="#">Planes</a>
+          <a class="nav-link js-scroll-trigger" href="#">Sobre Nosotros</a>
+        </div>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
-
-
-
-  <div class="sec1">
-
+  <div class="sec1" id="Descargar">
     <div class="content">
       <h1>HAGAMOS EL MUNDO MAS GAMER</h1>
       <div class="textBox">
@@ -44,15 +47,13 @@
       </div>
       <button type="button">Obtener App</button>
     </div>
-
-
   </div>
 
-<section class="projects-section " id="projects">
+<section class="projects-section " id="Novedades">
   <div class="container">
     <!-- Featured Project Row-->
     <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-      <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="img/GamerAmateur.jpg" alt="" /></div>
+      <div class="col-xl-8 col-lg-7"><img class="rounded img-fluid mb-3 mb-lg-0" src="img/GamerAmateur.jpg" alt="" /></div>
       <div class="col-xl-4 col-lg-5">
         <div class="featured-text text-center text-lg-left">
           <h1 class="text-white mb-0">Gamer Amateur</h1>
@@ -70,12 +71,12 @@
           <button type="button">Más Información</button>
         </div>
       </div>
-      <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="img/GamerAmateur.jpg" alt="" /></div>
+      <div class="col-xl-8 col-lg-7"><img class="rounded img-fluid mb-3 mb-lg-0" src="img/StreamerAmateur.jpg" alt="" /></div>
 
     </div>
 
     <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-      <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="img/GamerAmateur.jpg" alt="" /></div>
+      <div class="col-xl-8 col-lg-7"><img class="rounded img-fluid mb-3 mb-lg-0" src="img/Tareas.jpg" alt="" /></div>
       <div class="col-xl-4 col-lg-5">
         <div class="featured-text text-center text-lg-left">
           <h1 class="text-white mb-0">Tips y Tareas</h1>
@@ -90,6 +91,10 @@
 </section>
 
 
+
+<!-- Bootstrap core JS-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+<script src="js/scripts.js"></script>
 
 </body>
 
