--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
   </div>
 
-<section class="projects-section " id="Novedades">
+<section class="sec2 " id="Novedades">
   <div class="container">
     <!-- Featured Project Row-->
     <div class="row align-items-center no-gutters mb-4 mb-lg-5">
