--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="navbar-nav">
           <a class="nav-link js-scroll-trigger" href="#Descargar">Descargar</a>
           <a class="nav-link js-scroll-trigger" href="#Novedades">Novedades</a>
-          <a class="nav-link js-scroll-trigger" href="#">Planes</a>
+          <a class="nav-link js-scroll-trigger" href="#Planes">Planes</a>
           <a class="nav-link js-scroll-trigger" href="#">Sobre Nosotros</a>
         </div>
       </div>
@@ -52,7 +52,7 @@
 <section class="sec2 " id="Novedades">
   <div class="container">
     <!-- Featured Project Row-->
-    <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+    <div class="row align-items-center no-gutters margen-nov">
       <div class="col-xl-8 col-lg-7"><img class="rounded img-fluid mb-3 mb-lg-0" src="img/GamerAmateur.jpg" alt="" /></div>
       <div class="col-xl-4 col-lg-5">
         <div class="featured-text text-center text-lg-left">
@@ -63,19 +63,20 @@
       </div>
     </div>
 
-    <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-      <div class="col-xl-4 col-lg-5">
+    <div class="row align-items-center no-gutters margen-nov">
+      <div class="col-xl-8 col-lg-7"><img class="rounded img-fluid mb-3 mb-lg-0" src="img/StreamerAmateur.jpg" alt="" /></div>
+      <div class="col-xl-4 col-lg-5 order-lg-first">
         <div class="featured-text text-center text-lg-left">
           <h1 class="text-white mb-0">Streamer Amateur</h1>
-          <p class="text-white-50 mb-0">Realiza striming con dos simples pasos y tus directos llegaran a muchas personas. Disfruta  y diviertete transmitiendo directos.</p>
+          <p class="text-white-50 mb-0">Realiza streaming con dos simples pasos y tus directos llegaran a muchas personas. Disfruta  y diviertete transmitiendo directos.</p>
           <button type="button">Más Información</button>
         </div>
       </div>
-      <div class="col-xl-8 col-lg-7"><img class="rounded img-fluid mb-3 mb-lg-0" src="img/StreamerAmateur.jpg" alt="" /></div>
+
 
     </div>
 
-    <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+    <div class="row align-items-center no-gutters margen-nov">
       <div class="col-xl-8 col-lg-7"><img class="rounded img-fluid mb-3 mb-lg-0" src="img/Tareas.jpg" alt="" /></div>
       <div class="col-xl-4 col-lg-5">
         <div class="featured-text text-center text-lg-left">
@@ -86,11 +87,47 @@
       </div>
     </div>
 
-
   </div>
 </section>
 
+  <section class="plan-section bg-black" id="Planes">
+    <h1 class="d-flex justify-content-center text-light mb-5"  >Elige tu plan</h1>
+    <div class="container mb-2">
+      <div class="row justify-content-center">
 
+        <div class="col-md-4 mb-5 mx-3">
+          <div class="card h-100" >
+            <div class="card-body text-center">
+              <i class="fas fa-map-marked-alt text-primary mb-0"></i>
+              <h4 class="m-0">Amateur</h4>
+              <h1>Free</h1>
+              <h4 class="t-vacio">vacio</h4>
+              <button type="button">SELECCIONAR</button>
+              <hr class="my-3" />
+              <div class="medium text-black-50">Funciones:<br>- Gamer Amateur<br>- Streamer Amateur<br>- Tips y tares</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 mb-5 mx-3">
+          <div class="card h-100">
+            <div class="card-body text-center">
+              <i class="fas fa-envelope text-primary mb-0"></i>
+              <h4 class="text-uppercase m-0">Premium</h4>
+              <h1>5.00</h1>
+              <h4 class="m-0">USD por mes</h4>
+              <button type="button">SELECCIONAR</button>
+              <hr class="my-3" />
+              <div class="medium text-black-50">Funciones:<br>- Todas las funciones del plan Free<br>- Matchmaking</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="social d-flex justify-content-center">
+        <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a><a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a><a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
+      </div>
+    </div>
+  </section>
 
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
