--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
 
-  <nav class="navbar navbar-expand-lg navbar-dark ">
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <img src="img/logo-blanco.png" alt="" width="100" >
