--- a/index.html
+++ b/index.html
@@ -91,10 +91,11 @@
   </div>
 </section>
 
-  <section class="plan-section bg-black" id="Planes">
-    <h1 class="d-flex justify-content-center text-light mb-5"  >Elige tu plan</h1>
-    <div class="container mb-2">
-      <div class="row justify-content-center">
+<section class="plan-section bg-black" id="Planes">
+
+    <h1 class="titulo d-flex justify-content-center text-light"  >Elige tu plan</h1>
+    <div class="container mb-2 ">
+      <div class="row justify-content-center ">
 
         <div class="col-md-4 mb-5 mx-3">
           <div class="card h-100" >
@@ -116,7 +117,7 @@
               <i class="fas fa-envelope text-primary mb-0"></i>
               <h4 class="text-uppercase m-0">Premium</h4>
               <h1>5.00</h1>
-              <h4 class="m-0">USD por mes</h4>
+              <h4>USD por mes</h4>
               <button type="button">SELECCIONAR</button>
               <hr class="my-3" />
               <div class="medium text-black-50">Funciones:<br>- Todas las funciones del plan Free<br>- Matchmaking</div>
@@ -128,7 +129,7 @@
         <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a><a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a><a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
       </div>
     </div>
-  </section>
+</section>
 
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
