--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </nav>
 
 
-  <div class="sec1" id="Descargar">
+  <section class="sec1" id="Descargar">
     <div class="content">
       <h1>HAGAMOS EL MUNDO MAS GAMER</h1>
       <div class="textBox">
@@ -48,13 +48,13 @@
       </div>
       <button type="button">Obtener App</button>
     </div>
-  </div>
+  </section>
 
 <section class="sec2 " id="Novedades">
   <div class="container">
     <!-- Featured Project Row-->
-    <div class="row align-items-center no-gutters margen-nov">
-      <div class="col-xl-8 col-lg-7"><img class="rounded img-fluid mb-3 mb-lg-0" src="img/GamerAmateur.jpg" alt="" /></div>
+    <div class="row justify-content-center align-items-center no-gutters margen-nov">
+      <div class="col-xl-6 col-lg-7"><img class="rounded img-fluid mb-3 mb-lg-0" src="img/GamerAmateur.jpg" alt="" /></div>
       <div class="col-xl-4 col-lg-5">
         <div class="featured-text text-center text-lg-left">
           <h1 class="text-white mb-0">Gamer Amateur</h1>
@@ -64,8 +64,8 @@
       </div>
     </div>
 
-    <div class="row align-items-center no-gutters margen-nov">
-      <div class="col-xl-8 col-lg-7"><img class="rounded img-fluid mb-3 mb-lg-0" src="img/StreamerAmateur.jpg" alt="" /></div>
+    <div class="row justify-content-center align-items-center no-gutters margen-nov">
+      <div class="col-xl-6 col-lg-7"><img class="rounded img-fluid mb-3 mb-lg-0" src="img/StreamerAmateur.jpg" alt="" /></div>
       <div class="col-xl-4 col-lg-5 order-lg-first">
         <div class="featured-text text-center text-lg-left">
           <h1 class="text-white mb-0">Streamer Amateur</h1>
@@ -73,12 +73,10 @@
           <button type="button">Más Información</button>
         </div>
       </div>
-
-
     </div>
 
-    <div class="row align-items-center no-gutters margen-nov">
-      <div class="col-xl-8 col-lg-7"><img class="rounded img-fluid mb-3 mb-lg-0" src="img/Tareas.jpg" alt="" /></div>
+    <div class="row justify-content-center align-items-center no-gutters margen-nov">
+      <div class="col-xl-6 col-lg-7"><img class="rounded img-fluid mb-3 mb-lg-0" src="img/Tareas.jpg" alt="" /></div>
       <div class="col-xl-4 col-lg-5">
         <div class="featured-text text-center text-lg-left">
           <h1 class="text-white mb-0">Tips y Tareas</h1>
@@ -91,15 +89,16 @@
   </div>
 </section>
 
-<section class="plan-section bg-black" id="Planes">
+ <section class="plan-section bg-black" id="Planes">
 
     <h1 class="titulo d-flex justify-content-center text-light"  >Elige tu plan</h1>
-    <div class="container mb-2 ">
-      <div class="row justify-content-center ">
 
-        <div class="col-md-4 mb-5 mx-3">
-          <div class="card h-100" >
-            <div class="card-body text-center">
+    <div class="container">
+      <div class="row justify-content-center no-gutters">
+
+        <div class="col-md-4 mb-5 mx-3 ">
+          <div class="card h-100 " >
+            <div class="card-body text-center ">
               <i class="fas fa-map-marked-alt text-primary mb-0"></i>
               <h4 class="m-0">Amateur</h4>
               <h1>Free</h1>
@@ -124,11 +123,50 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="social d-flex justify-content-center">
-        <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a><a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a><a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
+
       </div>
     </div>
+</section>
+
+
+<section class="informacion">
+
+  <div class="row justify-content-center">
+
+    <form class="solinfo col-xl-4 mb-5 mx-3">
+      <div class="card mx-auto">
+        <div class="card-body mx-auto text-center">
+
+          <h2>Solicitar Información</h2>
+
+          <div class="mb-3 mx-auto text-start ">
+            <label for="InputNombre" class="form-label ">Nombre</label>
+            <input type="name" class="form-control " id="InputNombre">
+          </div>
+
+          <div class="mb-3 mx-auto text-start">
+            <label for="InputApellido" class="form-label">Apellido</label>
+            <input type="password" class="form-control" id="InputApellido">
+          </div>
+
+          <div class="mb-3 mx-auto text-start">
+            <label for="InputCiudad" class="form-label">Ciudad</label>
+            <input type="city" class="form-control" id="InputCiudad">
+          </div>
+
+          <div class="mb-3 mx-auto text-start">
+            <label for="InputCombre" class="form-label">Correo</label>
+            <input type="email" class="form-control" id="InputCombre">
+          </div>
+
+            <button type="button">Enviar</button>
+
+          </div>
+
+      </div>
+    </form>
+  </div>
+
 </section>
 
 <!-- Bootstrap core JS-->
