--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <a class="nav-link js-scroll-trigger" href="#Descargar">Descargar</a>
           <a class="nav-link js-scroll-trigger" href="#Novedades">Novedades</a>
           <a class="nav-link js-scroll-trigger" href="#Planes">Planes</a>
-          <a class="nav-link js-scroll-trigger" href="#">Sobre Nosotros</a>
+          <a class="nav-link js-scroll-trigger" href="#Informacion">Más Información</a>
         </div>
       </div>
     </div>
@@ -129,7 +129,7 @@
 </section>
 
 
-<section class="informacion">
+<section class="informacion" id="Informacion">
 
   <div class="row justify-content-center">
 
@@ -167,7 +167,83 @@
     </form>
   </div>
 
+  <!-- Footer-->
+
+
 </section>
+
+  <section class="">
+    <!-- Footer -->
+    <footer class="bg-dark text-white">
+      <!-- Grid container -->
+      <div class="container p-4">
+        <!--Grid row-->
+        <div class="row">
+          <!--Grid column-->
+          <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
+            <h5 class="text-uppercase">
+              <img src="img/logo-blanco.png" alt="" width="150" >
+             </h5>
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Redes Sociales</h5>
+
+            <div class="container p-1 pb-0">
+              <!-- Section: Social media -->
+              <section class="mb-4">
+                <!-- Facebook -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+                ><i class="fab fa-facebook-f"></i
+                ></a>
+
+                <!-- Twitter -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+                ><i class="fab fa-twitter"></i
+                ></a>
+
+                <!-- Google -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+                ><i class="fab fa-google"></i
+                ></a>
+
+                <!-- Instagram -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+                ><i class="fab fa-instagram"></i
+                ></a>
+
+                <!-- Linkedin -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+                ><i class="fab fa-linkedin-in"></i
+                ></a>
+
+                <!-- Github -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+                ><i class="fab fa-github"></i
+                ></a>
+              </section>
+              <!-- Section: Social media -->
+            </div>
+            <!-- Grid container -->
+          </div>
+          <!--Grid column-->
+
+
+        </div>
+        <!--Grid row-->
+      </div>
+      <!-- Grid container -->
+
+      <!-- Copyright -->
+      <div class="text-center p-3">
+        <pre> Privacy Policy      Terms of Service <br>© 2021 Mockup.  All Rights Reserved.</pre>
+      </div>
+      <!-- Copyright -->
+    </footer>
+    <!-- Footer -->
+  </section>
 
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
