--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
 
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -99,7 +102,6 @@
         <div class="col-md-4 mb-5 mx-3 ">
           <div class="card h-100 " >
             <div class="card-body text-center ">
-              <i class="fas fa-map-marked-alt text-primary mb-0"></i>
               <h4 class="m-0">Amateur</h4>
               <h1>Free</h1>
               <h4 class="t-vacio">vacio</h4>
@@ -113,7 +115,6 @@
         <div class="col-md-4 mb-5 mx-3">
           <div class="card h-100">
             <div class="card-body text-center">
-              <i class="fas fa-envelope text-primary mb-0"></i>
               <h4 class="text-uppercase m-0">Premium</h4>
               <h1>5.00</h1>
               <h4>USD por mes</h4>
@@ -174,7 +175,7 @@
 
   <section class="">
     <!-- Footer -->
-    <footer class="bg-dark text-white">
+    <footer class="bg-footer text-white">
       <!-- Grid container -->
       <div class="container p-4">
         <!--Grid row-->
@@ -194,35 +195,26 @@
             <div class="container p-1 pb-0">
               <!-- Section: Social media -->
               <section class="mb-4">
-                <!-- Facebook -->
-                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-                ><i class="fab fa-facebook-f"></i
-                ></a>
+                <a href="https://www.youtube.com" target="_blank">
+                  <img class="logors"  src="img/Logo-Youtube.png" ></img>
+                </a>
 
-                <!-- Twitter -->
-                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-                ><i class="fab fa-twitter"></i
-                ></a>
+                <a href="https://www.facebook.com" target="_blank">
+                  <img class="logors"  src="img/Logo-Facebook.png"></img>
+                </a>
 
-                <!-- Google -->
-                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-                ><i class="fab fa-google"></i
-                ></a>
+                <a href="https://www.twitter.com" target="_blank">
+                  <img class="logors"  src="img/Logo-Twitter.png" ></img>
+                </a>
 
-                <!-- Instagram -->
-                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-                ><i class="fab fa-instagram"></i
-                ></a>
+                <a href="https://www.instagram.com" target="_blank">
+                  <img class="logors"  src="img/Logo-Instagram.png"></img>
+                </a>
 
-                <!-- Linkedin -->
-                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-                ><i class="fab fa-linkedin-in"></i
-                ></a>
 
-                <!-- Github -->
-                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-                ><i class="fab fa-github"></i
-                ></a>
+
+
+
               </section>
               <!-- Section: Social media -->
             </div>
@@ -235,6 +227,9 @@
         <!--Grid row-->
       </div>
       <!-- Grid container -->
+
+
+
 
       <!-- Copyright -->
       <div class="text-center p-3">
