--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <!--Grid row-->
         <div class="row">
           <!--Grid column-->
-          <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
+          <div class="col-lg-4 col-md-12 mb-md-0">
             <h5 class="text-uppercase">
               <img src="img/logo-blanco.png" alt="" width="150" >
              </h5>
@@ -189,7 +189,7 @@
           <!--Grid column-->
 
           <!--Grid column-->
-          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+          <div class="col-lg-3 col-md-6 mb-md-0">
             <h5 class="text-uppercase">Redes Sociales</h5>
 
             <div class="container p-1 pb-0">
@@ -211,16 +211,17 @@
                   <img class="logors"  src="img/Logo-Instagram.png"></img>
                 </a>
 
-
-
-
-
               </section>
               <!-- Section: Social media -->
             </div>
             <!-- Grid container -->
           </div>
           <!--Grid column-->
+          <div class="col-lg-5 mt-4 ml-5 ">
+          <div class="text-end p-1">
+            <pre> Privacy Policy      Terms of Service <br>© 2021 Mockup.  All Rights Reserved.</pre>
+          </div>
+          </div>
 
 
         </div>
@@ -228,14 +229,6 @@
       </div>
       <!-- Grid container -->
 
-
-
-
-      <!-- Copyright -->
-      <div class="text-center p-3">
-        <pre> Privacy Policy      Terms of Service <br>© 2021 Mockup.  All Rights Reserved.</pre>
-      </div>
-      <!-- Copyright -->
     </footer>
     <!-- Footer -->
   </section>
