--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top ml-auto">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <img src="img/logo-blanco.png" alt="" width="100" >
@@ -23,8 +23,8 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
+      <div class="collapse navbar-collapse flex-grow-1 text-right" id="navbarNavAltMarkup">
+        <div class="navbar-nav ms-auto flex-nowrap text-end">
           <a class="nav-link js-scroll-trigger" href="#Descargar">Descargar</a>
           <a class="nav-link js-scroll-trigger" href="#Novedades">Novedades</a>
           <a class="nav-link js-scroll-trigger" href="#Planes">Planes</a>
@@ -34,149 +34,152 @@
     </div>
   </nav>
 
-
-  <section class="sec1" id="Descargar">
-    <div class="content">
-      <h1>HAGAMOS EL MUNDO MAS GAMER</h1>
-      <div class="textBox">
-        <p> Acercate y conectate a la escena<br>
-          competitiva de los videojuegos y<br>
-          ayudanos a hacer crecer esta<br>
-          comunidad<br>
-        </p>
-      </div>
-      <button type="button">Obtener App</button>
-    </div>
-  </section>
-
-<section class="sec2 " id="Novedades">
-  <div class="container">
-    <!-- Featured Project Row-->
-    <div class="row justify-content-center align-items-center no-gutters margen-nov">
-      <div class="col-xl-6 col-lg-7"><img class="rounded img-fluid mb-3 mb-lg-0" src="img/GamerAmateur.jpg" alt="" /></div>
-      <div class="col-xl-4 col-lg-5">
-        <div class="featured-text text-center text-lg-left">
-          <h1 class="text-white mb-0">Gamer Amateur</h1>
-          <p class="text-white-50 mb-0">Puedes registrarte y compartir tus logros y videojuegos  que juegues para que tengas más posibilidades de pertenecer a equipos profecionales de gaming.</p>
-          <button type="button">Más Información</button>
+  <main>
+    <section class="sec1" id="Descargar">
+      <div class="content">
+        <h1>HAGAMOS EL MUNDO MAS GAMER</h1>
+        <div class="textBox">
+          <p> Acercate y conectate a la escena<br>
+            competitiva de los videojuegos y<br>
+            ayudanos a hacer crecer esta<br>
+            comunidad<br>
+          </p>
         </div>
+        <button type="button">Obtener App</button>
       </div>
-    </div>
+    </section>
 
-    <div class="row justify-content-center align-items-center no-gutters margen-nov">
-      <div class="col-xl-6 col-lg-7"><img class="rounded img-fluid mb-3 mb-lg-0" src="img/StreamerAmateur.jpg" alt="" /></div>
-      <div class="col-xl-4 col-lg-5 order-lg-first">
-        <div class="featured-text text-center text-lg-left">
-          <h1 class="text-white mb-0">Streamer Amateur</h1>
-          <p class="text-white-50 mb-0">Realiza streaming con dos simples pasos y tus directos llegaran a muchas personas. Disfruta  y diviertete transmitiendo directos.</p>
-          <button type="button">Más Información</button>
-        </div>
-      </div>
-    </div>
-
-    <div class="row justify-content-center align-items-center no-gutters margen-nov">
-      <div class="col-xl-6 col-lg-7"><img class="rounded img-fluid mb-3 mb-lg-0" src="img/Tareas.jpg" alt="" /></div>
-      <div class="col-xl-4 col-lg-5">
-        <div class="featured-text text-center text-lg-left">
-          <h1 class="text-white mb-0">Tips y Tareas</h1>
-          <p class="text-white-50 mb-0">Mejora tus habilidades como streamer para brindar la mejor calidad en tus streamings o como gamer para pulir tus habilidades y dar lo mejor de ti en cada torneo.</p>
-          <button type="button">Más Información</button>
-        </div>
-      </div>
-    </div>
-
-  </div>
-</section>
-
- <section class="plan-section bg-black" id="Planes">
-
-    <h1 class="titulo d-flex justify-content-center text-light"  >Elige tu plan</h1>
-
-    <div class="container">
-      <div class="row justify-content-center no-gutters">
-
-        <div class="col-md-4 mb-5 mx-3 ">
-          <div class="card h-100 " >
-            <div class="card-body text-center ">
-              <h4 class="m-0">Amateur</h4>
-              <h1>Free</h1>
-              <h4 class="t-vacio">vacio</h4>
-              <button type="button">SELECCIONAR</button>
-              <hr class="my-3" />
-              <div class="medium text-black-50">Funciones:<br>- Gamer Amateur<br>- Streamer Amateur<br>- Tips y tares</div>
+    <section class="sec2 " id="Novedades">
+      <div class="container">
+        <!-- Featured Project Row-->
+        <div class="row justify-content-center align-items-center no-gutters margen-nov">
+          <div class="col-xl-6 col-lg-7"><img class="rounded img-fluid mb-3 mb-lg-0" src="img/GamerAmateur.jpg" alt="" /></div>
+          <div class="col-xl-4 col-lg-5">
+            <div class="featured-text text-center text-lg-left">
+              <h1 class="text-white mb-0">Gamer Amateur</h1>
+              <p class="text-white-50 mb-0">Puedes registrarte y compartir tus logros y videojuegos  que juegues para que tengas más posibilidades de pertenecer a equipos profecionales de gaming.</p>
+              <button type="button">Más Información</button>
             </div>
           </div>
         </div>
 
-        <div class="col-md-4 mb-5 mx-3">
-          <div class="card h-100">
-            <div class="card-body text-center">
-              <h4 class="text-uppercase m-0">Premium</h4>
-              <h1>5.00</h1>
-              <h4>USD por mes</h4>
-              <button type="button">SELECCIONAR</button>
-              <hr class="my-3" />
-              <div class="medium text-black-50">Funciones:<br>- Todas las funciones del plan Free<br>- Matchmaking</div>
+        <div class="row justify-content-center align-items-center no-gutters margen-nov">
+          <div class="col-xl-6 col-lg-7"><img class="rounded img-fluid mb-3 mb-lg-0" src="img/StreamerAmateur.jpg" alt="" /></div>
+          <div class="col-xl-4 col-lg-5 order-lg-first">
+            <div class="featured-text text-center text-lg-left">
+              <h1 class="text-white mb-0">Streamer Amateur</h1>
+              <p class="text-white-50 mb-0">Realiza streaming con dos simples pasos y tus directos llegaran a muchas personas. Disfruta  y diviertete transmitiendo directos.</p>
+              <button type="button">Más Información</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="row justify-content-center align-items-center no-gutters margen-nov">
+          <div class="col-xl-6 col-lg-7"><img class="rounded img-fluid mb-3 mb-lg-0" src="img/Tareas.jpg" alt="" /></div>
+          <div class="col-xl-4 col-lg-5">
+            <div class="featured-text text-center text-lg-left">
+              <h1 class="text-white mb-0">Tips y Tareas</h1>
+              <p class="text-white-50 mb-0">Mejora tus habilidades como streamer para brindar la mejor calidad en tus streamings o como gamer para pulir tus habilidades y dar lo mejor de ti en cada torneo.</p>
+              <button type="button">Más Información</button>
             </div>
           </div>
         </div>
 
       </div>
-    </div>
-</section>
+    </section>
 
+    <section class="plan-section bg-black" id="Planes">
 
-<section class="informacion" id="Informacion">
+      <h1 class="titulo d-flex justify-content-center text-light"  >Elige tu plan</h1>
 
-  <div class="row justify-content-center">
+      <div class="container">
+        <div class="row justify-content-center no-gutters">
 
-    <form class="solinfo col-xl-4 mb-5 mx-3">
-      <div class="card mx-auto">
-        <div class="card-body mx-auto text-center">
-
-          <h2>Solicitar Información</h2>
-
-          <div class="mb-3 mx-auto text-start ">
-            <label for="InputNombre" class="form-label ">Nombre</label>
-            <input type="name" class="form-control " id="InputNombre">
+          <div class="col-md-4 mb-5 mx-3 ">
+            <div class="card h-100 " >
+              <div class="card-body text-center ">
+                <h4 class="m-0">Amateur</h4>
+                <h1>Free</h1>
+                <h4 class="t-vacio">vacio</h4>
+                <button type="button">SELECCIONAR</button>
+                <hr class="my-3" />
+                <div class="medium text-black-50">Funciones:<br>- Gamer Amateur<br>- Streamer Amateur<br>- Tips y tares</div>
+              </div>
+            </div>
           </div>
 
-          <div class="mb-3 mx-auto text-start">
-            <label for="InputApellido" class="form-label">Apellido</label>
-            <input type="password" class="form-control" id="InputApellido">
+          <div class="col-md-4 mb-5 mx-3">
+            <div class="card h-100">
+              <div class="card-body text-center">
+                <h4 class="text-uppercase m-0">Premium</h4>
+                <h1>5.00</h1>
+                <h4>USD por mes</h4>
+                <button type="button">SELECCIONAR</button>
+                <hr class="my-3" />
+                <div class="medium text-black-50">Funciones:<br>- Todas las funciones del plan Free<br>- Matchmaking</div>
+              </div>
+            </div>
           </div>
 
-          <div class="mb-3 mx-auto text-start">
-            <label for="InputCiudad" class="form-label">Ciudad</label>
-            <input type="city" class="form-control" id="InputCiudad">
-          </div>
-
-          <div class="mb-3 mx-auto text-start">
-            <label for="InputCombre" class="form-label">Correo</label>
-            <input type="email" class="form-control" id="InputCombre">
-          </div>
-
-            <button type="button">Enviar</button>
-
-          </div>
-
+        </div>
       </div>
-    </form>
-  </div>
-
-  <!-- Footer-->
+    </section>
 
 
-  </section>
+    <section class="informacion" id="Informacion">
+
+      <div class="row justify-content-center">
+
+        <form class="solinfo col-xl-4 mb-5 mx-3">
+          <div class="card mx-auto">
+            <div class="card-body mx-auto text-center">
+
+              <h2>Solicitar Información</h2>
+
+              <div class="mb-3 mx-auto text-start ">
+                <label for="InputNombre" class="form-label ">Nombre</label>
+                <input type="name" class="form-control " id="InputNombre">
+              </div>
+
+              <div class="mb-3 mx-auto text-start">
+                <label for="InputApellido" class="form-label">Apellido</label>
+                <input type="password" class="form-control" id="InputApellido">
+              </div>
+
+              <div class="mb-3 mx-auto text-start">
+                <label for="InputCiudad" class="form-label">Ciudad</label>
+                <input type="city" class="form-control" id="InputCiudad">
+              </div>
+
+              <div class="mb-3 mx-auto text-start">
+                <label for="InputCombre" class="form-label">Correo</label>
+                <input type="email" class="form-control" id="InputCombre">
+              </div>
+
+              <button type="button">Enviar</button>
+
+            </div>
+
+          </div>
+        </form>
+      </div>
+
+      <!-- Footer-->
+
+
+    </section>
+
+  </main>
 
 
   <footer class="bg-footer text-white">
+
       <!-- Grid container -->
-      <div class="container p-4">
+      <div class="container pt-4 pb-1">
         <!--Grid row-->
-        <div class="row">
+        <div class="row d-flex justify-content-between">
           <!--Grid column-->
-          <div class="col-lg-4 col-md-12 mb-md-0">
+          <div class="col-lg-3 ">
             <h5 class="text-uppercase">
               <img src="img/logo-blanco.png" alt="" width="150" >
              </h5>
@@ -184,7 +187,7 @@
           <!--Grid column-->
 
           <!--Grid column-->
-          <div class="col-lg-3 col-md-6 mb-md-0">
+          <div class="col-lg-3 ">
 
             <h5 class="text-uppercase">Redes Sociales</h5>
 
@@ -213,10 +216,10 @@
             <!-- Grid container -->
           </div>
           <!--Grid column-->
-          <div class="col-lg-5 mt-4 ml-5 ">
-          <div class="text-end p-1">
-            <pre> Privacy Policy      Terms of Service <br>© 2021 Mockup.  All Rights Reserved.</pre>
-          </div>
+          <div class="col-lg-4 mt-4 ml-5 ">
+            <div class="text-end p-1">
+              <pre> Privacy Policy      Terms of Service <br>© 2021 Mockup.  All Rights Reserved.</pre>
+            </div>
           </div>
 
 
