--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           <a class="nav-link js-scroll-trigger" href="#Descargar">Descargar</a>
           <a class="nav-link js-scroll-trigger" href="#Novedades">Novedades</a>
           <a class="nav-link js-scroll-trigger" href="#Planes">Planes</a>
+          <a class="nav-link js-scroll-trigger" href="#Nosotros">Sobre Nosotros</a>
           <a class="nav-link js-scroll-trigger" href="#Informacion">Más Información</a>
         </div>
       </div>
@@ -51,6 +52,7 @@
 
     <section class="sec2 " id="Novedades">
       <div class="container">
+
         <!-- Featured Project Row-->
         <div class="row justify-content-center align-items-center no-gutters margen-nov">
           <div class="col-xl-6 col-lg-7"><img class="rounded img-fluid mb-3 mb-lg-0" src="img/GamerAmateur.jpg" alt="" /></div>
@@ -89,9 +91,7 @@
     </section>
 
     <section class="plan-section bg-black" id="Planes">
-
       <h1 class="titulo d-flex justify-content-center text-light"  >Elige tu plan</h1>
-
       <div class="container">
         <div class="row justify-content-center no-gutters">
 
@@ -128,7 +128,7 @@
     <section class="sec-nosotros" id="Nosotros">
       <div class="container">
 
-
+        <div class="row pt-3 text-center"><h1>SOBRE NOSOTROS</h1></div>
         <div class="row pt-3">
           <div class="col-lg-4 text-center">
             <img src="img/Foto-Aaron.png" class="bd-placeholder-img rounded-circle" width="140" height="140" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
