--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <section class="sec-nosotros" id="Nosotros">
       <div class="container">
 
-        <div class="row pt-3 text-center"><h1>SOBRE NOSOTROS</h1></div>
+        <div class="titulo row pt-3 text-center"><h1>SOBRE NOSOTROS</h1></div>
         <div class="row pt-3">
           <div class="col-lg-4 text-center">
             <img src="img/Foto-Aaron.png" class="bd-placeholder-img rounded-circle" width="140" height="140" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
