--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <main>
     <section class="sec1" id="Descargar">
       <div class="content">
-        <h1>HAGAMOS EL MUNDO MAS GAMER</h1>
+        <div><h1 class="text-center">HAGAMOS EL MUNDO MAS GAMER</h1></div>
         <div class="textBox">
           <p> Acercate y conectate a la escena<br>
             competitiva de los videojuegos y<br>
@@ -55,7 +55,7 @@
 
         <!-- Featured Project Row-->
         <div class="row justify-content-center align-items-center no-gutters margen-nov">
-          <div class="col-xl-6 col-lg-7"><img class="rounded img-fluid mb-3 mb-lg-0" src="img/GamerAmateur.jpg" alt="" /></div>
+          <div class="col-xl-6 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="img/GamerAmateur.jpg" alt="" /></div>
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
               <h1 class="text-white mb-0">Gamer Amateur</h1>
@@ -66,7 +66,7 @@
         </div>
 
         <div class="row justify-content-center align-items-center no-gutters margen-nov">
-          <div class="col-xl-6 col-lg-7"><img class="rounded img-fluid mb-3 mb-lg-0" src="img/StreamerAmateur.jpg" alt="" /></div>
+          <div class="col-xl-6 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="img/StreamerAmateur.jpg" alt="" /></div>
           <div class="col-xl-4 col-lg-5 order-lg-first">
             <div class="featured-text text-center text-lg-left">
               <h1 class="text-white mb-0">Streamer Amateur</h1>
@@ -77,7 +77,7 @@
         </div>
 
         <div class="row justify-content-center align-items-center no-gutters margen-nov">
-          <div class="col-xl-6 col-lg-7"><img class="rounded img-fluid mb-3 mb-lg-0" src="img/Tareas.jpg" alt="" /></div>
+          <div class="col-xl-6 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="img/Tareas.jpg" alt="" /></div>
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
               <h1 class="text-white mb-0">Tips y Tareas</h1>
@@ -186,7 +186,7 @@
 
               <div class="mb-3 mx-auto text-start">
                 <label for="InputApellido" class="form-label">Apellido</label>
-                <input type="password" class="form-control" id="InputApellido">
+                <input type="lastname" class="form-control" id="InputApellido">
               </div>
 
               <div class="mb-3 mx-auto text-start">
@@ -195,8 +195,8 @@
               </div>
 
               <div class="mb-3 mx-auto text-start">
-                <label for="InputCombre" class="form-label">Correo</label>
-                <input type="email" class="form-control" id="InputCombre">
+                <label for="InputCorreo" class="form-label">Correo</label>
+                <input type="email" class="form-control" id="InputCorreo">
               </div>
 
               <button type="button">Enviar</button>
@@ -215,14 +215,14 @@
   </main>
 
 
-  <footer class="bg-footer text-white">
+  <footer class="bg-footer text-white ">
 
       <!-- Grid container -->
-      <div class="container pt-4 pb-1">
+      <div class="container-fluid pt-4 pb-1 ">
         <!--Grid row-->
-        <div class="row d-flex justify-content-between">
+        <div class="row ">
           <!--Grid column-->
-          <div class="col-lg-3 ">
+          <div class="logo-footer col d-flex justify-content-start">
             <h5 class="text-uppercase">
               <img src="img/logo-blanco.png" alt="" width="150" >
              </h5>
@@ -230,7 +230,7 @@
           <!--Grid column-->
 
           <!--Grid column-->
-          <div class="col-lg-3 ">
+          <div class="col">
 
             <h5 class="text-uppercase">Redes Sociales</h5>
 
@@ -259,7 +259,7 @@
             <!-- Grid container -->
           </div>
           <!--Grid column-->
-          <div class="col-lg-4 mt-4 ml-5 ">
+          <div class="footer-copy col d-flex justify-content-end mt-4">
             <div class="text-end p-1">
               <pre> Privacy Policy      Terms of Service <br>© 2021 Mockup.  All Rights Reserved.</pre>
             </div>
