--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       </div>
     </section>
 
-    <section class="sec-nosotros" id="Nosotros">
+    <section class="sec-nosotros " id="Nosotros">
       <div class="container">
 
         <div class="titulo row pt-3 text-center"><h1>SOBRE NOSOTROS</h1></div>
@@ -169,11 +169,11 @@
 
     </section>
 
-    <section class="informacion" id="Informacion">
+    <section class="informacion " id="Informacion">
 
-      <div class="row justify-content-center">
+      <div class="row aling-items-center justify-content-center">
 
-        <form class="solinfo col-xl-4 mb-5 mx-3">
+        <form class="solinfo col-xl-4 mb-5 mx-3 ">
           <div class="card mx-auto">
             <div class="card-body mx-auto text-center">
 
