--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
       </button>
       <div class="collapse navbar-collapse flex-grow-1 text-right" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto flex-nowrap text-end">
-          <a class="nav-link js-scroll-trigger" href="#Descargar">Descargar</a>
-          <a class="nav-link js-scroll-trigger" href="#Novedades">Novedades</a>
-          <a class="nav-link js-scroll-trigger" href="#Planes">Planes</a>
-          <a class="nav-link js-scroll-trigger" href="#Nosotros">Sobre Nosotros</a>
-          <a class="nav-link js-scroll-trigger" href="#Informacion">Más Información</a>
+          <a class="nav-link " href="#Descargar">Descargar</a>
+          <a class="nav-link " href="#Novedades" >Novedades</a>
+          <a class="nav-link " href="#Planes">Planes</a>
+          <a class="nav-link " href="#Nosotros">Sobre Nosotros</a>
+          <a class="nav-link " href="#Informacion">Más Información</a>
         </div>
       </div>
     </div>
@@ -46,7 +46,17 @@
             comunidad<br>
           </p>
         </div>
-        <button type="button">Obtener App</button>
+        <div class="d-flex justify-content-center">
+          <a href="https://play.google.com/store?hl=es" target="_blank">
+            <button type="button" class="boton-Android"  href=""></button>
+          </a>
+          <a href="https://www.apple.com/la/app-store/" target="_blank">
+            <button  type="button" class="boton-IOS"></button>
+          </a>
+        </div>
+
+
+
       </div>
     </section>
 
