--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="es" xmlns="http://www.w3.org/1999/html">
 
 <head>
-  <meta name='viewport' content='width=device-width, initial-scale=1'>
+
   <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 
+  <link rel="shortcut icon" href="icon.png">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
