--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
       <div class="content">
         <div><h1 class="text-center">HAGAMOS EL MUNDO MAS GAMER</h1></div>
         <div class="textBox">
-          <p> Acercate y conectate a la escena<br>
+          <p> Acércate y conéctate a la escena<br>
             competitiva de los videojuegos y<br>
-            ayudanos a hacer crecer esta<br>
+            ayúdanos a hacer crecer esta<br>
             comunidad<br>
           </p>
         </div>
@@ -70,7 +70,7 @@
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
               <h1 class="text-white mb-0">Gamer Amateur</h1>
-              <p class="text-white-50 mb-0">Puedes registrarte y compartir tus logros y videojuegos  que juegues para que tengas más posibilidades de pertenecer a equipos profecionales de gaming.</p>
+              <p class="text-white-50 mb-0">Puedes registrarte y compartir tus logros y videojuegos que juegues para que tengas más posibilidades de pertenecer a equipos profesionales de gaming.</p>
               <button type="button">Más Información</button>
             </div>
           </div>
@@ -81,7 +81,7 @@
           <div class="col-xl-4 col-lg-5 order-lg-first">
             <div class="featured-text text-center text-lg-left">
               <h1 class="text-white mb-0">Streamer Amateur</h1>
-              <p class="text-white-50 mb-0">Realiza streaming con dos simples pasos y tus directos llegaran a muchas personas. Disfruta  y diviertete transmitiendo directos.</p>
+              <p class="text-white-50 mb-0">Realiza streaming con dos simples pasos y tus directos llegaran a muchas personas. Disfruta y diviértete transmitiendo directos.</p>
               <button type="button">Más Información</button>
             </div>
           </div>
@@ -92,7 +92,7 @@
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
               <h1 class="text-white mb-0">Tips y Tareas</h1>
-              <p class="text-white-50 mb-0">Mejora tus habilidades como streamer para brindar la mejor calidad en tus streamings o como gamer para pulir tus habilidades y dar lo mejor de ti en cada torneo.</p>
+              <p class="text-white-50 mb-0">Mejora tus habilidades como streamer para brindar la mejor calidad en tus directos, o como gamer para pulir tus habilidades y dar lo mejor de ti en cada torneo.</p>
               <button type="button">Más Información</button>
             </div>
           </div>
